--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>geomesa-quickstart</artifactId>
+    <artifactId>geomesa-quickstart-accumulo-1.4</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
