Updated the project to accommodate the packge-name change in GeoMesa.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>geomesa</groupId>
+            <groupId>org.locationtech.geomesa</groupId>
             <artifactId>geomesa-core-accumulo1.5</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
