--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <dependencies>
         <dependency>
             <groupId>org.locationtech.geomesa</groupId>
-            <artifactId>geomesa-core-accumulo1.5</artifactId>
+            <artifactId>geomesa-core-accumulo1.5-hadoop2.0</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
