--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,40 @@
 
     <repositories>
         <repository>
-            <id>geotools</id>
-            <url>http://download.osgeo.org/webdav/geotools</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+                <updatePolicy>never</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </snapshots>
+            <id>LocationTechReleases</id>
+            <name>LocationTech Releases</name>
+            <url>https://repo.locationtech.org/content/repositories/releases/</url>
+            <layout>default</layout>
         </repository>
         <repository>
-            <id>Apache</id>
-            <url>https://repository.apache.org/service/local/repositories/releases/content</url>
-        </repository>
-        <repository>
-            <id>LocationTech</id>
-            <url>https://repo.locationtech.org/content/repositories/geomesa-releases/</url>
+            <releases>
+                <enabled>false</enabled>
+                <updatePolicy>never</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+            <id>LocationTechSnapshots</id>
+            <name>LocationTech Snapshots</name>
+            <url>https://repo.locationtech.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
-    <groupId>groupId</groupId>
+    <groupId>geomesa</groupId>
     <artifactId>geomesa-quickstart</artifactId>
     <version>1.0-SNAPSHOT</version>
 
