--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,19 @@
 
     <repositories>
         <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net repository</name>
+            <url>http://download.java.net/maven/2</url>
+        </repository>
+        <repository>
+            <id>geotools</id>
+            <url>http://download.osgeo.org/webdav/geotools</url>
+        </repository>
+        <repository>
+            <id>Apache</id>
+            <url>https://repository.apache.org/service/local/repositories/releases/content</url>
+        </repository>
+        <repository>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>never</updatePolicy>
@@ -58,6 +71,7 @@
             <artifactId>commons-cli</artifactId>
             <version>1.2</version>
         </dependency>
+<!--
         <dependency>
             <groupId>org.apache.accumulo</groupId>
             <artifactId>accumulo-core</artifactId>
@@ -93,6 +107,7 @@
             <artifactId>gt-epsg-hsql</artifactId>
             <version>${gt.version}</version>
         </dependency>
+-->
     </dependencies>
 
     <build>
