--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.locationtech.geomesa</groupId>
             <artifactId>geomesa-core-accumulo1.5</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-rc.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
