--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <gt.version>11.2</gt.version>
         <geomesa.version>1.0.0-rc.6</geomesa.version>
+        <accumulo.version>1.5.1</accumulo.version>
     </properties>
 
     <dependencies>
@@ -29,7 +30,7 @@
         <dependency>
             <groupId>org.locationtech.geomesa</groupId>
             <artifactId>geomesa-utils-accumulo1.5</artifactId>
-            <version>1.0.0-rc.5-SNAPSHOT</version>
+            <version>${geomesa.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -39,12 +40,12 @@
         <dependency>
             <groupId>org.apache.accumulo</groupId>
             <artifactId>accumulo-core</artifactId>
-            <version>1.5.0</version>
+            <version>${accumulo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.accumulo</groupId>
             <artifactId>accumulo-start</artifactId>
-            <version>1.5.0</version>
+            <version>${accumulo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
