--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>1.0.0-rc.5-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.locationtech.geomesa</groupId>
+            <artifactId>geomesa-utils-accumulo1.5</artifactId>
+            <version>1.0.0-rc.5-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.2</version>
