--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.locationtech.geomesa</groupId>
             <artifactId>geomesa-utils-accumulo1.5</artifactId>
-            <version>1.0.0-rc.5-SNAPSHOT</version>
+            <version>${geomesa.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
